# normCode

./: .gitignore  C__Users_ProgU_PycharmProjects_normCode_direct_infra_experiment_nc_ai_planning_ex_iteration_5_prompts_[1.2.2.2.]1.1_instruction_distillation.md  C__Users_ProgU_PycharmProjects_normCode_direct_infra_experiment_nc_ai_planning_ex_iteration_5_prompts_[1.2.2.3.3.2.]location_of_related_files_prompt.md  C__Users_ProgU_PycharmProjects_normCode_direct_infra_experiment_nc_ai_planning_ex_iteration_5_prompts_[1.2.3.2.]1.2_context_registration.md  C__Users_ProgU_PycharmProjects_normCode_direct_infra_experiment_nc_ai_planning_ex_iteration_5_prompts_[1.2.4.2.]1.3_manual_review.md  C__Users_ProgU_PycharmProjects_normCode_direct_infra_experiment_nc_ai_planning_ex_iteration_5_prompts_[1.3.2.2.]2.1_deconstruction.md  C__Users_ProgU_PycharmProjects_normCode_direct_infra_experiment_nc_ai_planning_ex_iteration_5_prompts_[1.3.3.2.]2.2_natural_language_translation.md  C__Users_ProgU_PycharmProjects_normCode_direct_infra_experiment_nc_ai_planning_ex_iteration_5_prompts_[1.4.2.2.]3.1_serialization.md  C__Users_ProgU_PycharmProjects_normCode_direct_infra_experiment_nc_ai_planning_ex_iteration_5_prompts_[1.4.3.2.]3.2_redirection.md  C__Users_ProgU_PycharmProjects_normCode_direct_infra_experiment_nc_ai_planning_ex_iteration_5_prompts_[1.4.4.2.]3.3_formalization.md  C__Users_ProgU_PycharmProjects_normCode_direct_infra_experiment_nc_ai_planning_ex_iteration_5_prompts_[1.4.5.2.]3.4_natural_language_translation.md  NORMAL_SERVER_CANVAS_RELATIONSHIP.md  NORMAL_SERVER_CAPABILITY_ANALYSIS.md  (+18 more)
(+1839 files in other folders)
